--- a/app/src/main/res/layout/layout_controls.xml
+++ b/app/src/main/res/layout/layout_controls.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -40,17 +41,107 @@
         android:text="@string/label_pan"
         android:layout_marginTop="@dimen/standard_margin" />
 
-    <com.codepunk.demo.ExtendedSeekBar
-        android:id="@+id/seek_pan_x"
+    <LinearLayout
+        android:id="@+id/layout_pan_x"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:icon="@drawable/ic_swap_horiz_white_24dp" />
+        android:layout_marginTop="@dimen/standard_margin"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
-    <com.codepunk.demo.ExtendedSeekBar
-        android:id="@+id/seek_pan_y"
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_swap_horiz_white_24dp"/>
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/text_pan_x_value"
+            android:layout_width="@dimen/extended_seek_bar_value_view_width"
+            android:layout_height="wrap_content"
+            tools:text="100%"/>
+
+        <View
+            android:layout_width="2px"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/small_margin"
+            android:background="@android:color/white"
+            tools:ignore="PxUsage"/>
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/text_pan_x_min_value"
+            android:layout_width="@dimen/extended_seek_bar_value_view_width"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:textAlignment="gravity"
+            tools:text="0%"/>
+
+        <android.support.v7.widget.AppCompatSeekBar
+            android:id="@+id/seek_pan_x_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:max="1000" />
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/text_pan_x_max_value"
+            android:layout_width="@dimen/extended_seek_bar_value_view_width"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:textAlignment="gravity"
+            tools:text="100%"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_pan_y"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:icon="@drawable/ic_swap_vert_white_24dp" />
+        android:layout_marginTop="@dimen/standard_margin"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_swap_vert_white_24dp"/>
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/text_pan_y_value"
+            android:layout_width="@dimen/extended_seek_bar_value_view_width"
+            android:layout_height="wrap_content"
+            tools:text="100%"/>
+
+        <View
+            android:layout_width="2px"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/small_margin"
+            android:background="@android:color/white"
+            tools:ignore="PxUsage"/>
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/text_pan_y_min_value"
+            android:layout_width="@dimen/extended_seek_bar_value_view_width"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:textAlignment="gravity"
+            tools:text="0%"/>
+
+        <android.support.v7.widget.AppCompatSeekBar
+            android:id="@+id/seek_pan_y_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:max="1000" />
+
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/text_pan_y_max_value"
+            android:layout_width="@dimen/extended_seek_bar_value_view_width"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:textAlignment="gravity"
+            tools:text="100%"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/label_scale"
@@ -62,6 +153,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/standard_margin"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -70,6 +162,108 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:id="@+id/layout_scale_x"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_swap_horiz_white_24dp"/>
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/text_scale_x_value"
+                    android:layout_width="@dimen/extended_seek_bar_value_view_width"
+                    android:layout_height="wrap_content"
+                    tools:text="0.5"/>
+
+                <View
+                    android:layout_width="2px"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/small_margin"
+                    android:background="@android:color/white"
+                    tools:ignore="PxUsage"/>
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/text_scale_x_min_value"
+                    android:layout_width="@dimen/extended_seek_bar_value_view_width"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:textAlignment="gravity"
+                    tools:text="1.0"/>
+
+                <android.support.v7.widget.AppCompatSeekBar
+                    android:id="@+id/seek_scale_x_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:max="1000" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/text_scale_x_max_value"
+                    android:layout_width="@dimen/extended_seek_bar_value_view_width"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:textAlignment="gravity"
+                    tools:text="5.0"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_scale_y"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/standard_margin"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_swap_vert_white_24dp"/>
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/text_scale_y_value"
+                    android:layout_width="@dimen/extended_seek_bar_value_view_width"
+                    android:layout_height="wrap_content"
+                    tools:text="0.5"/>
+
+                <View
+                    android:layout_width="2px"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/small_margin"
+                    android:background="@android:color/white"
+                    tools:ignore="PxUsage"/>
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/text_scale_y_min_value"
+                    android:layout_width="@dimen/extended_seek_bar_value_view_width"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:textAlignment="gravity"
+                    tools:text="1.0"/>
+
+                <android.support.v7.widget.AppCompatSeekBar
+                    android:id="@+id/seek_scale_y_value"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:max="1000" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/text_scale_y_max_value"
+                    android:layout_width="@dimen/extended_seek_bar_value_view_width"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:textAlignment="gravity"
+                    tools:text="5.0"/>
+
+            </LinearLayout>
+
+            <!--
             <com.codepunk.demo.ExtendedSeekBar
                 android:id="@+id/seek_scale_x"
                 android:layout_width="match_parent"
@@ -81,13 +275,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/ic_swap_vert_white_24dp" />
+            -->
 
         </LinearLayout>
 
         <ImageButton
             android:id="@+id/image_btn_lock"
             android:layout_width="@dimen/touch_target_size"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/touch_target_size"
             app:srcCompat="@drawable/ic_lock_outline_white_24dp"
             android:scaleType="center"
             style="?borderlessButtonStyle"/>
