--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,8 @@
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="appCompatProgressBarStyle">@style/AppCompatProgressBar</item>
+        <item name="appCompatRatingBarStyle">@style/AppCompatRatingBar</item>
+        <item name="appCompatSeekBarStyle">@style/AppCompatSeekBar</item>
     </style>
 
 </resources>
