Got locked scaling functionality working

--- a/app/src/main/res/layout/layout_controls.xml
+++ b/app/src/main/res/layout/layout_controls.xml
@@ -221,7 +221,7 @@
                     android:textAlignment="gravity"
                     tools:text="1.0"/>
 
-                <android.support.v7.widget.AppCompatSeekBar
+                <com.codepunk.demo.AppCompatSeekBarEx
                     android:id="@+id/seek_scale_x_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -259,7 +259,7 @@
                     android:textAlignment="gravity"
                     tools:text="1.0"/>
 
-                <android.support.v7.widget.AppCompatSeekBar
+                <com.codepunk.demo.AppCompatSeekBarEx
                     android:id="@+id/seek_scale_y_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
