--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,10 @@
 <resources>
-    <style name="AppCompatProgressBar" parent="@android:style/Widget.ProgressBar">
-        <item name="supportMax">100</item>
-        <item name="supportMin">0</item>
-        <item name="supportProgress">0</item>
-        <item name="supportSecondaryProgress">0</item>
+    <style name="AppCompatProgressBarEx" parent="@android:style/Widget.ProgressBar">
     </style>
 
-    <style name="AppCompatRatingBar" parent="@style/AppCompatProgressBar">
+    <style name="AppCompatRatingBarEx" parent="@style/AppCompatProgressBarEx">
     </style>
 
-    <style name="AppCompatSeekBar" parent="@style/AppCompatProgressBar">
+    <style name="AppCompatSeekBarEx" parent="@style/AppCompatProgressBarEx">
     </style>
-
 </resources>
