--- a/app/src/main/res/layout-port/activity_interactive_image_view.xml
+++ b/app/src/main/res/layout-port/activity_interactive_image_view.xml
@@ -25,8 +25,9 @@
         app:layout_constraintBottom_toTopOf="@id/guideline"
         tools:src="@drawable/wilderness_lodge"
         android:background="@android:color/black"
-        android:scaleType="centerCrop"
-        android:clickable="true"/>
+        android:scaleType="centerInside"
+        android:clickable="true"
+        android:focusable="true" />
 
     <FrameLayout
         android:id="@+id/layout_controls"
