--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,7 @@
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="appCompatSeekBarExStyle">@style/AppCompatSeekBarEx</item>
+        <item name="interactiveImageViewStyle">@style/InteractiveImageView</item>
     </style>
 
 </resources>
